carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/_ytt_lib/lookup-service/upstream/services.yaml
#! Service for the lookup service.
apiVersion: v1
kind: Service
metadata:
  name: lookup-service
  namespace: educates
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: lookup-service
